--- a/css/styles.css
+++ b/css/styles.css
@@ -72,9 +72,24 @@ img {
 }
 
 .container {
-  width: 1158px;
+  min-width: 320px;
+  max-width: 428px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding-left: 16px;
+  padding-right: 16px;
+
+  outline: 1px solid red;
+  outline-offset: -1px;
+}
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 737px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .container {
+    max-width: 1128px;
+  }
 }
 
 .button {
@@ -99,34 +114,36 @@ img {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
+@media only screen and (max-width: 767.98px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 22px;
+  }
+}
+
 .flex-header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 15px;
 }
 
 .flex-header .nav,
-.flex-header .address .list,
 .site-nav {
   display: flex;
   align-items: center;
 }
 
-.address {
-  margin-left: auto;
-}
-
-.site-nav .item,
-.auth-nav .item {
+.site-nav .item {
   margin-right: 40px;
 }
 
 .site-nav .item:last-child,
-.auth-nav .item:last-child {
+.address-nav .item:last-child {
   margin-right: 0px;
 }
 .logo {
-  margin-right: 76px;
+  /* margin-right: 76px; */
   color: var(--iris);
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
@@ -134,6 +151,25 @@ img {
   line-height: 1.17;
   font-weight: 800;
   letter-spacing: 0.02em;
+}
+@media only screen and (min-width: 768px) {
+  .logo {
+    margin-right: 76px;
+  }
+}
+.header-button {
+  background-color: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+}
+@media only screen and (min-width: 768px) {
+  .header-button {
+    display: none;
+  }
+}
+.icon-menu {
+  stroke: var(--navy-blue);
 }
 .nav .span-color {
   color: var(--navy-blue);
@@ -154,7 +190,11 @@ img {
   color: var(--navy-blue);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+@media only screen and (max-width: 767.98px) {
+  .site-nav {
+    display: none;
+  }
+}
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--ocean);
@@ -181,8 +221,12 @@ img {
 .address .link:focus {
   color: var(--ocean);
 }
-
-.auth-nav a {
+.address-nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.address-nav a {
   color: var(--slate);
   font-size: 16px;
   line-height: 1.5;
@@ -191,14 +235,33 @@ img {
   transition-duration: 1s;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.address {
-  font-style: normal;
+.address-nav a:hover,
+.address-nav a:focus {
+  color: var(--iris);
 }
 
-.auth-nav a:hover,
-.auth-nav a:focus {
-  color: var(--iris);
+@media only screen and (min-width: 1128px) {
+  .address-nav .email-link {
+    margin-right: 40px;
+  }
+}
+.address {
+  font-style: normal;
+  margin-left: auto;
+}
+
+@media only screen and (max-width: 767.98px) {
+  .address {
+    display: none;
+  }
+}
+.menu-toggle.modal-btn {
+  background-color: transparent;
+}
+.menu-toggle.modal-btn:hover,
+.menu-toggle.modal-btn:focus {
+  background-color: var(--ocean);
+  border: none;
 }
 
 /*----------------- STUDIO PAGE STYLES--------------- */
@@ -594,8 +657,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.wrapper-footer {
-}
+
 .wrapper-footer .title,
 .form-container .title {
   color: var(--white);
@@ -933,4 +995,138 @@ input[type="checkbox"]:checked + .modal-agreement-description .custom-checkbox {
 .submit_button:hover,
 .submit_button:focus {
   background-color: var(--ocean);
+}
+
+/* mobile menu */
+.menu .link {
+  padding: 10px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.menu .link:hover,
+.menu .link:focus {
+  text-decoration: underline;
+}
+
+.menu-toggle {
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.menu-toggle:hover .icon-menu,
+.menu-toggle:focus .icon-menu {
+  stroke: var(--ocean);
+}
+
+.menu-container {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 40px;
+  background-color: var(--white);
+  z-index: 999;
+
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #fff;
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.mobile-menu .link {
+  display: block;
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
+}
+.site-nav-mobile-menu {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.site-nav-mobile-menu .link-decor {
+  color: var(--navyblue);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.site-nav-mobile-menu .link:hover,
+.site-nav-mobile-menu .link:focus {
+  color: var(--ocean);
+}
+
+.address-mobile-menu {
+  margin-top: auto;
+  margin-bottom: 48px;
+}
+.address-mobile-menu .address-nav {
+  display: flex;
+  gap: 40px;
+  flex-direction: column;
+}
+.address-mobile-menu .phone {
+  color: var(--iris, #4d5ae5);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.1;
+  font-style: normal;
+  margin-bottom: 40px;
+}
+@media only screen and (max-width: 427.98px) {
+  .address-mobile-menu .phone {
+    font-size: 28px;
+  }
+}
+@media only screen and (max-width: 354.98px) {
+  .address-mobile-menu .phone {
+    font-size: 23px;
+  }
+}
+.address-mobile-menu .email {
+  color: var(--slate, #434455);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+.social-icons-block-mobile-menu {
+  display: flex;
+  gap: 56px;
+}
+@media only screen and (max-width: 420px) {
+  .social-icons-block-mobile-menu {
+    gap: 40px;
+  }
+}
+@media only screen and (max-width: 330px) {
+  .social-icons-block-mobile-menu {
+    gap: 30px;
+  }
 }
